# rust-actix-react-web-starter

./: Cargo.toml  LICENSE  README.md  docker-compose.yml
api_server/: .env.sample  Cargo.toml
api_server/migrations/00000000000000_diesel_initial_setup/: up.sql
api_server/migrations/2018-10-09-101948_users/: up.sql
api_server/migrations/2018-10-16-095633_invitations/: up.sql
api_server/migrations/2019-08-26-210150_create_blogs/: up.sql
api_server/src/: main.rs  schema.rs  utils.rs
api_server/src/handlers/: auth.rs  blog.rs  invitation.rs  mod.rs  register.rs
api_server/src/models/: blog.rs  invitation.rs  mod.rs  user.rs
api_server/src/services/: email.rs
