[package]
name = "api_server"
version = "0.1.0"
authors = ["Kator James <kator95@gmail.com>"]
edition = "2018"
workspace = ".."

[dependencies]
actix-identity = "0.1.0"
actix-web = "1.0.5"
actix-files = "0.1.4"
argonautica = "0.2.0"
chrono = { version = "0.4.6", features = ["serde"] }
derive_more = "0.15.0"
diesel = { version = "1.4.6", features = ["postgres","uuidv07", "r2d2", "chrono"] }
dotenv = "0.14.1"
env_logger = "0.6"
futures = "0.1"
r2d2 = "0.8"
lazy_static = "1.3.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
sparkpost = "0.5.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
